--- a/package.json
+++ b/package.json
@@ -2,16 +2,27 @@
   "name": "digitallending",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:44383",
   "dependencies": {
     "@hookform/resolvers": "^1.3.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-activity": "^1.2.2",
+    "react-axios": "^2.0.4",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.13.0",
+    "sweetalert2-react": "^0.8.3",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
